cbits/Bullet.h

float btWheelInfo_m_suspensionRelativeVelocity_get(void *c); //attribute: ::btScalar btWheelInfo->m_suspensionRelativeVelocity
void btWheelInfo_m_suspensionRestLength1_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_suspensionRestLength1
float btWheelInfo_m_suspensionRestLength1_get(void *c); //attribute: ::btScalar btWheelInfo->m_suspensionRestLength1
void btWheelInfo_m_suspensionStiffness_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_suspensionStiffness
float btWheelInfo_m_suspensionStiffness_get(void *c); //attribute: ::btScalar btWheelInfo->m_suspensionStiffness
void btWheelInfo_m_wheelAxleCS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo->m_wheelAxleCS
void btWheelInfo_m_wheelAxleCS_get(void *c,float* a);
void btWheelInfo_m_wheelDirectionCS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfo->m_wheelDirectionCS
void btWheelInfo_m_wheelDirectionCS_get(void *c,float* a);
void btWheelInfo_m_wheelsDampingCompression_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_wheelsDampingCompression
float btWheelInfo_m_wheelsDampingCompression_get(void *c); //attribute: ::btScalar btWheelInfo->m_wheelsDampingCompression
void btWheelInfo_m_wheelsDampingRelaxation_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_wheelsDampingRelaxation
float btWheelInfo_m_wheelsDampingRelaxation_get(void *c); //attribute: ::btScalar btWheelInfo->m_wheelsDampingRelaxation
void btWheelInfo_m_wheelsRadius_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_wheelsRadius
float btWheelInfo_m_wheelsRadius_get(void *c); //attribute: ::btScalar btWheelInfo->m_wheelsRadius
void btWheelInfo_m_wheelsSuspensionForce_set(void *c,float a); //attribute: ::btScalar btWheelInfo->m_wheelsSuspensionForce
float btWheelInfo_m_wheelsSuspensionForce_get(void *c); //attribute: ::btScalar btWheelInfo->m_wheelsSuspensionForce
void btWheelInfo_m_worldTransform_set(void *c,float* a); //attribute: ::btTransform btWheelInfo->m_worldTransform
void btWheelInfo_m_worldTransform_get(void *c,float* a);
void* btWheelInfoConstructionInfo_new(); //constructor: btWheelInfoConstructionInfo  ( ::btWheelInfoConstructionInfo::* )(  ) 
void btWheelInfoConstructionInfo_free(void *c);
 
void btWheelInfoConstructionInfo_m_bIsFrontWheel_set(void *c,int a); //attribute: bool btWheelInfoConstructionInfo->m_bIsFrontWheel
int btWheelInfoConstructionInfo_m_bIsFrontWheel_get(void *c); //attribute: bool btWheelInfoConstructionInfo->m_bIsFrontWheel
void btWheelInfoConstructionInfo_m_chassisConnectionCS_set(void *c,float* a); //attribute: ::btVector3 btWheelInfoConstructionInfo->m_chassisConnectionCS
void btWheelInfoConstructionInfo_m_chassisConnectionCS_get(void *c,float* a);
void btWheelInfoConstructionInfo_m_frictionSlip_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_frictionSlip
float btWheelInfoConstructionInfo_m_frictionSlip_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_frictionSlip
void btWheelInfoConstructionInfo_m_maxSuspensionForce_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_maxSuspensionForce
float btWheelInfoConstructionInfo_m_maxSuspensionForce_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_maxSuspensionForce
void btWheelInfoConstructionInfo_m_maxSuspensionTravelCm_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_maxSuspensionTravelCm
float btWheelInfoConstructionInfo_m_maxSuspensionTravelCm_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_maxSuspensionTravelCm
void btWheelInfoConstructionInfo_m_suspensionRestLength_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_suspensionRestLength
float btWheelInfoConstructionInfo_m_suspensionRestLength_get(void *c); //attribute: ::btScalar btWheelInfoConstructionInfo->m_suspensionRestLength
void btWheelInfoConstructionInfo_m_suspensionStiffness_set(void *c,float a); //attribute: ::btScalar btWheelInfoConstructionInfo->m_suspensionStiffness