Physics/Bullet/Raw/BulletDynamics/Vehicle.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#111>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_suspensionRelativeVelocity_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#60>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_suspensionRestLength1_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#60>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_suspensionRestLength1_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#64>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_suspensionStiffness_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#64>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_suspensionStiffness_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#59>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelAxleCS_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#59>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelAxleCS_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelDirectionCS_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#58>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelDirectionCS_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#65>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsDampingCompression_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#65>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsDampingCompression_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#66>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsDampingRelaxation_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#66>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsDampingRelaxation_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsRadius_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#63>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsRadius_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#113>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsSuspensionForce_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#113>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_wheelsSuspensionForce_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_worldTransform_set    `( BtWheelInfoClass bc )' =>     { withBt* `bc' , withTransform* `Transform'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfo_m_worldTransform_get    `( BtWheelInfoClass bc )' =>     { withBt* `bc' , allocaTransform-  `Transform'  peekTransform* } -> `()' #}
-- * btWheelInfoConstructionInfo
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#20>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_new as btWheelInfoConstructionInfo    {  } -> `BtWheelInfoConstructionInfo' mkBtWheelInfoConstructionInfo* #}
{#fun btWheelInfoConstructionInfo_free    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#33>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_bIsFrontWheel_set    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#33>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_bIsFrontWheel_get    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#21>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_chassisConnectionCS_set    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#21>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_chassisConnectionCS_get    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#31>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_frictionSlip_set    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#31>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_frictionSlip_get    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#32>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_maxSuspensionForce_set    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#32>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_maxSuspensionForce_get    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#25>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_maxSuspensionTravelCm_set    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#25>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_maxSuspensionTravelCm_get    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#24>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_suspensionRestLength_set    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#24>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_suspensionRestLength_get    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.h?r=2223#28>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletDynamics/Vehicle/btWheelInfo.cpp?r=2223>
-}
{#fun btWheelInfoConstructionInfo_m_suspensionStiffness_set    `( BtWheelInfoConstructionInfoClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
